--- a/src/components/groupchat/groupchat.css
+++ b/src/components/groupchat/groupchat.css
@@ -36,6 +36,10 @@
   border-radius: 50%;
 }
 
+.img-bound {
+  border-radius: 50%;
+}
+
 .chat-container {
   display: flex;
   width: 70%;
@@ -47,7 +51,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  padding: 20px 0px 20px 20px;
+  padding: 20px 200px 20px 20px;
   border-bottom: solid 1px rgb(150, 147, 147);
 }
 
@@ -175,12 +179,14 @@ textarea:focus {
 }
 
 .group-header {
-  padding: 0 0 10px 10px;
+  position: relative;
+  /* margin: 0 0 20px 10px; */
 }
 
 .group-header .btn {
   position: absolute;
-  right: 0;
+  right: 20px;
+  top: 27px;
 }
 
 .create-margin {
